--- a/1. Curso Relâmpago de Python/Curso relâmpago de Python - Exercícios.ipynb
+++ b/1. Curso Relâmpago de Python/Curso relâmpago de Python - Exercícios.ipynb
@@ -27,6 +27,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2401\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(7**4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -54,12 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Olá,', 'pai!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Olá, pai!\"\n",
+    "print(s.split())"
+   ]
   },
   {
    "cell_type": "code",
@@ -97,14 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "planeta = \"Terra\"\n",
     "diametro = 12742"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O diâmetro da terra é de 12742 kilômetros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"O diâmetro da {} é de {} kilômetros.\".format(planeta.lower(), diametro))"
    ]
   },
   {
@@ -141,12 +182,30 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lst = [1,2,[3,4],[5,[100,200,['olá']],23,11],1,7]"
+    "lst = [1,2,[3,4],[5,[100,200,['olá']],23,11],1,7]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olá'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst[3][1][2][0]"
    ]
   },
   {
@@ -182,13 +241,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {'k1':[1,2,3,{'café':['banana','mulher','colher',{'alvo':[1,2,3,'olá']}]}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olá'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['k1'][3]['café'][3]['alvo'][3]"
    ]
   },
   {
@@ -220,7 +297,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Uma tupla não é mutavel o dicionário é. Alem disso o dicionario tem chaves e a tupla não."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,12 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "domain.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "def obterDominio(email):\n",
+    "    return email.split('@')[1]\n",
+    "print(obterDominio('user@domain.com'))"
+   ]
   },
   {
    "cell_type": "code",
@@ -271,12 +360,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def encontreCachorro(frase):\n",
+    "    if typeOf(frase) == typeof(str):\n",
+    "        return 'cachorro'.upper() in frase.upper().split()\n",
+    "\n",
+    "encontreCachorro('Existe um cachorro aí?')"
+   ]
   },
   {
    "cell_type": "code",
@@ -453,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
