--- a/1. Curso Relâmpago de Python/Curso relâmpago de Python - Exercícios.ipynb
+++ b/1. Curso Relâmpago de Python/Curso relâmpago de Python - Exercícios.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
    ],
    "source": [
     "def obterDominio(email):\n",
-    "    return email.split('@')[1]\n",
+    "    return email.split('@')[-1]\n",
     "print(obterDominio('user@domain.com'))"
    ]
   },
@@ -411,12 +411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contaCachorro(frase):    \n",
+    "    palavras = list(filter(lambda palavra: palavra.upper() == 'cachorro'.upper(), frase.replace(\".\", \"\").replace(\",\", \"\").split()))\n",
+    "    print(len(palavras))    \n",
+    "\n",
+    "contaCachorro('Esse cachorro é mais rápido que o outro cachorro.')"
+   ]
   },
   {
    "cell_type": "code",
@@ -453,13 +465,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sopa', 'salada']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "seq = ['sopa','cachorro','salada','gato','ótimo']"
+    "seq = ['sopa','cachorro','salada','gato','ótimo']\n",
+    "list(filter(lambda palavra: palavra[0].upper() == 'S', seq))"
    ]
   },
   {
@@ -491,14 +513,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def capturar_velocidade(speed, is_birthday):\n",
-    "    pass"
+    "    limiteBonus = 0\n",
+    "    if is_birthday:\n",
+    "        limiteBonus = 5\n",
+    "    if speed <= (60 + limiteBonus):\n",
+    "        print(\"Sem multa\")\n",
+    "    elif speed > (60+ limiteBonus) and speed <= (80+ limiteBonus):\n",
+    "        print(\"Multa Pequena\")\n",
+    "    elif speed > (80+ limiteBonus):\n",
+    "        print(\"Multa grande\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multa Pequena\n"
+     ]
+    }
+   ],
+   "source": [
+    "capturar_velocidade(81,True)\n"
    ]
   },
   {
